# repeated-hallucinations

./: .gitignore  main.py  pyproject.toml
core_files/: muon.py  train_gpt2_clean.py
simpleqa_eval/: __init__.py  config.py
simpleqa_eval/data/: simpleqa_loader.py
simpleqa_eval/entity/: extractor.py  jaccard.py  wiki_proxy.py
simpleqa_eval/eval/: answer_match.py  consistency.py
simpleqa_eval/models/: generator.py
simpleqa_eval/pipeline/: aggregate.py  run_pipeline.py
simpleqa_eval/viz/: plot_trends.py
