[project]
name = "repeated-hallucinations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=2.24.0",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "socksio>=1.0.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
